# gridava

./: .codecov.yml  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO  codecov.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.yml
.github/workflows/: rust.yml
adr/: 01_handle_shapes.md  02_no_std.md  03_collections.md  _adr_template.md
benches/: triangle_benchmark.rs
examples/colony_game/: game_types.rs  main.rs
src/: lib.rs
src/core/: algorithms.rs  collection.rs  grid.rs  misc.rs  mod.rs  tile.rs  tile_collection.rs  transform.rs  types.rs
src/hex/: algorithms.rs  axial.rs  coordinate.rs  edge.rs  grid.rs  hex_grid.rs  mod.rs  render.rs  shape.rs  shape_constructors.rs  vertex.rs
src/triangle/: coordinate.rs  mod.rs
