[package]
name = "gridava"
version = "0.2.0"
edition = "2021"
description = "An implementation of 2D coordinate systems."
readme = "README.md"
repository = "https://github.com/algodiva/gridava"
license = "MIT"
keywords = ["gamedev", "grid", "coordinate"]
categories = ["data-structures", "game-development"]
exclude = ["/.gitignore", "/TODO", "/.gitattributes", "/.github"]

[dependencies]
ndarray = "0.16.1"
serde = {version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
assert_float_eq = "1"
rand = "0.8.5"

[features]
serde = ["dep:serde", "ndarray/serde"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
