[package]
name = "gridava"
version = "0.2.0"
edition = "2021"
description = "An implementation of 2D coordinate systems."
readme = "README.md"
repository = "https://github.com/algodiva/gridava"
license = "MIT"
keywords = ["gamedev", "grid", "coordinate"]
categories = ["data-structures", "game-development"]
exclude = ["/.gitignore", "/TODO", "/.gitattributes", "/.github"]

[dependencies]
ndarray = {version = "0.16.1", default-features = false}
serde = {version = "1.0", default-features = false, features = ["derive"], optional = true}
libm = {version = "0.2.11", default-features = false}

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
assert_float_eq = "1"
rand = "0.8.5"

[features]
default = ["std"]
serde = ["dep:serde", "ndarray/serde"]
std = ["serde?/std", "ndarray/std"]
alloc = ["serde?/alloc"]

[profile.release-debug]
inherits = "release"
debug = true

[[bench]]
name = "triangle_benchmark"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
